--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,23 @@
 ---
 ---
 
+@article{horawalavithana2022vaccination,
+  title={Vaccination trials on hold: malicious and low credibility content on Twitter during the AstraZeneca COVID-19 vaccine development},
+  author={Horawalavithana, Sameera and De Silva, Ravindu and Weerasekara, Nipuna and Kin Wai, NG and Nabeel, Mohamed and Abayaratna, Buddhini and Elvitigala, Charitha and Wijesekera, Primal and Iamnitchi, Adriana},
+  journal={Computational and Mathematical Organization Theory},
+  pages={1--22},
+  year={2022},
+  publisher={Springer},
+  url={https://doi.org/10.1007/s10588-022-09370-3},
+  doi={10.1007/s10588-022-09370-3},
+  pdf={https://rdcu.be/c0Bxn},
+  abstract = {The development of COVID-19 vaccines during the global pandemic that started in 2020 was marked by uncertainty and misinformation reflected also on social media. This paper provides a quantitative evaluation of the Uniform Resource Locators (URLs) shared on Twitter around the clinical trials of the AstraZeneca vaccine and their temporary interruption in September 2020. We analyzed URLs cited in Twitter messages before and after the temporary interruption of the vaccine development on September 9, 2020 to investigate the presence of low credibility and malicious information. We show that the halt of the AstraZeneca clinical trials prompted tweets that cast doubt, fear and vaccine opposition. We discovered a strong presence of URLs from low credibility or malicious websites, as classified by independent fact-checking organizations or identified by web hosting infrastructure features. Moreover, we identified what appears to be coordinated operations to artificially promote some of these URLs hosted on malicious websites.},
+  kind={Journals},
+  selected={true},
+  abbr={CMOT},
+  bibtex_show={true}
+}
+
 @inproceedings{10.1145/3460120.3485357,
     author = {Bandara, Vinuri and Rathnayake, Thisura and Weerasekara, Nipuna and Elvitigala, Charitha and Thilakarathna, Kenneth and Wijesekera, Primal and De Zoysa, Kasun and Keppitiyagama, Chamath},
     title = {Demo: Large Scale Analysis on Vulnerability Remediation in Open-Source JavaScript Projects},
@@ -37,5 +54,6 @@
     abbr={SCAM},
     bibtex_show={true}
 }
+
 
 
